cmake_minimum_required(VERSION 3.6)
set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)
add_executable(unixIPC ${SOURCE_FILES})
add_executable(fork fork.cpp)
add_executable(forknum forknum.cpp)
add_executable(signal signal.cpp)
add_executable(sigusr sigusr.cpp)
add_executable(pipe pipe.cpp)
add_executable(pipeLs pipeLs.cpp)
add_executable(namedPipespeaker namedPipespeaker.cpp)
add_executable(namePipetick namePipetick.cpp)
add_executable(fileLock fileLock.cpp)
add_executable(msgQukick msgQukick.cpp)
add_executable(msgQuspock msgQuspock.cpp)
add_executable(semdemo semdome.cpp)
add_executable(sharedmemory sharedmemory.cpp)
add_executable(semrm semrm.cpp)
add_executable(readShm readShm.cpp)